syntax = "proto3";

package interview;

service InterviewService {
  rpc CreateInterview (InterviewRequest) returns (InterviewResponse);
  rpc CreateAptitudeTest (AptitudeTestRequest) returns (AptitudeTestResponse);
  rpc CreateMachineTask (MachineTaskRequest) returns (MachineTaskResponse);
}

message InterviewRequest {
  string applicationId = 1;
  string jobId = 2;
  string jobSeekerId = 3;
}

message InterviewResponse {
  string interviewId = 1;
  string status = 2;
}

message AptitudeTestRequest {
  string jobId = 1;
  string companyId = 2;
}

message AptitudeTestResponse {
  bool success = 1;
  string testId = 2;
}

message MachineTaskRequest {
  string jobId = 1;
  string companyId = 2;
}

message MachineTaskResponse {
  bool success = 1;
  string testId = 2;
}